# claude-router

./: .gitignore  .hermes-seal.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  router.py  sbom.cdx.json  scaffolds.json
.github/workflows/: ci.yml
assets/: preview-source.txt  preview-spec.md
benchmarks/: L2-002-sonnet-vs-opus.md  PF-001-haiku-vs-sonnet.md  PF-002-content-routing.md  PF-006-operational-anti-finding.md  README.md
data/: centroids.json  routing_table.json
examples/: basic_usage.py
scripts/: onboard.sh
src/claude_router/: __init__.py  scaffolds.json
tests/: test_graceful_degrade.py  test_router.py
