[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-router"
version = "1.0.0"
description = "Embedding-based scaffold router for Claude API. Routes tasks to the right scaffold using centroid matching. By Hermes Labs."
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Hermes Labs", email = "rbosch@lpci.ai"},
]
keywords = [
    "claude", "anthropic", "llm", "routing", "scaffold",
    "embedding", "cost-optimization", "prompt-engineering",
    "context-engineering", "agent", "agentic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "requests",
    "numpy",
]

[project.urls]
Homepage = "https://hermes-labs.ai"
Documentation = "https://github.com/roli-lpci/claude-router#readme"
Repository = "https://github.com/roli-lpci/claude-router"
"Bug Tracker" = "https://github.com/roli-lpci/claude-router/issues"

[project.scripts]
claude-router = "claude_router:_cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_router"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_router/scaffolds.json" = "claude_router/scaffolds.json"
"src/claude_router/centroids.json" = "claude_router/centroids.json"
"src/claude_router/routing_table.json" = "claude_router/routing_table.json"
