[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-router"
version = "1.0.0"
description = "Claude prompt router that chooses the right model tier and scaffold using local embeddings."
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Rolando Bosch"},
]
keywords = [
    "claude-router", "claude", "anthropic", "prompt-routing", "model-routing",
    "scaffold-routing", "cost-optimization", "embedding-classification",
    "prompt-engineering", "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "requests",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/hermes-labs-ai/claude-router"
Documentation = "https://github.com/hermes-labs-ai/claude-router#readme"
Repository = "https://github.com/hermes-labs-ai/claude-router"
"Bug Tracker" = "https://github.com/hermes-labs-ai/claude-router/issues"

[project.scripts]
claude-router = "claude_router.router:_cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_router"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_router/scaffolds.json" = "claude_router/scaffolds.json"
"src/claude_router/centroids.json" = "claude_router/centroids.json"
"src/claude_router/routing_table.json" = "claude_router/routing_table.json"
